# ppca-raft

./: CMakeLists.txt  README.md  right.cpp  test.cpp
include/ppca_raft/client/: client.h
include/raft/Client/: Client.h
include/raft/Common/: external.grpc.pb.h  external.pb.h  raft.grpc.pb.h  raft.pb.h
include/raft/Server/: ExternalRpcService.h  HeartBeatController.h  RaftRpcService.h  Server.h  config.h  event.h
protobuf/: External.proto  external.proto  gen_grpc_files.sh  raft.proto
src/: CMakeLists.txt
src/Client/: CMakeLists.txt  Client.cpp
src/Common/: CMakeLists.txt  external.grpc.pb.cc  external.pb.cc  raft.grpc.pb.cc  raft.pb.cc
src/Server/: CMakeLists.txt  ExternalRpcService.cpp  HeartBeatController.cpp  RaftRpcService.cpp  Server.cpp  event.cpp
src/client/: client.cpp
src/common/rpc/: external.grpc.pb.cc  external.grpc.pb.h  external.pb.cc  external.pb.h
src/server/: external_rpc_service.h
test/: CMakeLists.txt  RaftConfig0.json  RaftConfig2.json  client.cpp  server.cpp  test.cpp
